@@ -17,6 +17,7 @@ Bugs fixed:
 - 1682388 Relaxed CMPIValue * alignment pickyness of sfcb
 - 1686170 Fixed instance comparision in queries do not work as expected
 - 1686696 Fixed sfcb XML parsing failures not indicated to client
+- 1689953 Fixed slp agent lacks proper signal handling
 
 Changes in 1.2.1
 ================
